[Freetype] Doesn't support coloured fonts https://bugs.webkit.org/show_bug.cgi?id=156579

Source/WebCore:

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-09-12
Reviewed by Michael Catanzaro.

Covered by existing tests. This needs a large rebaseline that will be done in follow up commits.

* platform/graphics/FontCascade.h: Enable advance text rendering mode by default.
(WebCore::FontCascade::advancedTextRenderingMode const):
(WebCore::FontCascade::computeRequiresShaping const):
* platform/graphics/freetype/SimpleFontDataFreeType.cpp:
(WebCore::Font::platformInit): Do not get metrics from OS/2 table for non-scalable fonts.
* platform/graphics/harfbuzz/HarfBuzzFaceCairo.cpp:
(WebCore::harfBuzzGetGlyph): Use U8_APPEND_UNSAFE() instead of converting to a String and then encoding it with
UTF8Encoding().

Tools:

Reviewed by Michael Catanzaro.

Bump webkitgtk-test-fonts to 0.0.6 version that includes the EmijoOne font.

* gtk/jhbuild.modules:
* wpe/jhbuild.modules:

Canonical link: https://commits.webkit.org/193250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221909 268f45cc-cd09-0410-ab3c-d52691b4dbfc